BGP_1 Docker and PostgreSQL Environment Configuration, BGP_2 Implementation of Base Entities: Game and User, BGP_3 Many-to-Many Relationships for Tags and Collection, BGP_4 Flyway/Liquibase Configuration, BGP_8 Service for Fetching User Collections from the API, BGP_7 WebClient Configuration with XML Support